# JuegoProyectoFinalPOO2Semestre

PROYECTO-FINAL/: CMakeLists.txt  UML Proyecto_POO.drawio  main.cpp
PROYECTO-FINAL/Final/: CMakeLists.txt  Casilla.cpp  Casilla.h  CasillaEspecial.cpp  CasillaEspecial.h  CasillaNormal.cpp  CasillaNormal.h  Jugador.cpp  Jugador.h  main.cpp
codigo Proyecto/: CMakeLists.txt  CasillaEspecial.cpp  CasillaNormal.cpp  Dado.cpp  Dado.h  GestorPartida.cpp  GestorPartida.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Tablero.cpp  Tablero.h  main.cpp
codigo Proyecto/PROYECTO-FINAL/: CMakeLists.txt  UML Proyecto_POO.drawio  main.cpp
codigo Proyecto/PROYECTO-FINAL/Final/: CMakeLists.txt  Casilla.cpp  Casilla.h  CasillaEspecial.cpp  CasillaEspecial.h  CasillaNormal.cpp  CasillaNormal.h  Jugador.cpp  Jugador.h  main.cpp
